Minor improvements for the day v1

--- a/app/html/admin/subs.html
+++ b/app/html/admin/subs.html
@@ -34,7 +34,7 @@
 
 @def main():
   <div id="center-container">
-    <div class="content">
+    <div class="content" style="margin: 0px 5px 0px 5px;">
       <h2>Subs</h2>
       <hr>
       <div class="col-12 admin-page-form">
@@ -50,7 +50,7 @@
         </div>
       </div>
       <hr>
-      <div class="admin section subs">
+      <div class="admin section subs" style="font-size: 14px; width: 90%;">
         <div>
           @if admin_route == 'admin.subs_search':
             <div>Showing results for: @{term}</div>
