Disabling email_notify field when no email address

--- a/app/html/user/settings/account.html
+++ b/app/html/user/settings/account.html
@@ -34,7 +34,7 @@
       </div>
       <div class="alert div-message"></div>
       <div class="alert div-error"></div>
-      <button type="submit" class="pure-button pure-button-primary" id="edituser-btnsubmit" data-prog="@{_('Editing...')}" data-success="@{_('Saved!')}">@{_('Save')}</button>
+      <button type="submit" class="pure-button pure-button-primary" id="edituseraccount-btnsubmit" data-prog="@{_('Editing...')}" data-success="@{_('Saved!')}">@{_('Save')}</button>
     </fieldset>
   </form>
 
