--- a/app/html/sub/bans.html
+++ b/app/html/sub/bans.html
@@ -88,7 +88,7 @@
           <div data-name="@{_('Reason:')}" class="elem pure-u-1 pure-u-md-5-24">@{ban.reason}</div>
           <div data-name="@{_('Expires:')}" class="elem pure-u-1 pure-u-md-4-24">
             @if ban.expires:
-            <time-until datetime="@{ban.expires.isoformat()}Z">@{ban.expires.isoformat()}</time-until> \
+            <time-until datetime="@{ban.expires.isoformat()}">@{ban.expires.isoformat()}</time-until> \
             @else:
             @{_('Never')}\
             @end
