--- a/app/html/mod/reportdetails.html
+++ b/app/html/mod/reportdetails.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(sub, report, reported_user, related_reports, related_reports_json, banuserform, is_sub_banned, post, comment, subInfo, subMods, logs, createreportenote)
 @def title():
 Mod |\
