--- a/app/html/mod/sub_reports.html
+++ b/app/html/mod/sub_reports.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(sub, reports, page, subInfo, subMods)
 @def title():
 Mod |\
