--- a/app/html/user/check-your-email.html
+++ b/app/html/user/check-your-email.html
@@ -1,5 +1,5 @@
 @require(reason, email, show_resend_link)
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 
 @def content():
   <div id="container">
