--- a/app/html/user/resend_confirmation.html
+++ b/app/html/user/resend_confirmation.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(form, error)
 @def title():
   Send confirmation instructions |\
