--- a/app/html/mod/closed.html
+++ b/app/html/mod/closed.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(reports, page, sub, subInfo, subMods)
 @def title():
 Mod |\
