--- a/app/html/user/profile.html
+++ b/app/html/user/profile.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(user, level, progress, postCount, commentCount, givenScore, postScore, commentScore, userScore, invitecodeinfo, last_login, badges, owns, mods, habits, msgform, target_user_is_admin, ignform)
 
 @def title():
