--- a/app/html/user/messages/notifications.html
+++ b/app/html/user/messages/notifications.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(notifications, postmeta)
 @import 'shared/sidebar/messages.html' as sb
 @def sidebar():
