--- a/app/html/user/topbar.html
+++ b/app/html/user/topbar.html
@@ -1,4 +1,8 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
+@def sidebar():
+
+@include('shared/sidebar/home.html')
+@end
 
 @def main():
 <div id="container">
