--- a/app/html/indexmulti.html
+++ b/app/html/indexmulti.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @import "shared/post.html" as ipost
 @require(page, posts, subs, sublist, sort_type, kw, ann)
 
