--- a/app/html/user/ignores.html
+++ b/app/html/user/ignores.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(igns, menu, page)
 @import 'shared/sidebar/messages.html' as sb
 
