--- a/app/html/user/messages/messages.html
+++ b/app/html/user/messages/messages.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(page, messages, box_route, msgform, msgform_content, error)
 @import 'shared/sidebar/messages.html' as sb
 @def sidebar():
@@ -9,7 +9,7 @@
 <div id="center-container">
   <div class="inbox content">
     <div class="user-activity col-12">
-      <h3 style="display: inline-block;"><span class="p-icon" data-icon="mail" style="display: inline-block;"></span>@{_('Inbox')}</h3>
+      <h3 style="display: inline-block;"><span class="p-icon" data-icon="mail" style="display: inline-block; margin-right: 5px;"></span>@{_('Inbox')}</h3>
       - <span class="links"><a class="markall">@{_("Mark all as read")}</a></span>
       @for message in messages:
         <article class="pmessage post @{message['read'] == None and 'newmsg' or ''}">
