--- a/app/html/user/savedcomments.html
+++ b/app/html/user/savedcomments.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(user, page, comments, postmeta, highlight)
 
 @def title():
