--- a/app/html/user/savedposts.html
+++ b/app/html/user/savedposts.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @import "shared/post.html" as ipost
 @require(page, sort_type, posts, user)
 
