--- a/app/html/user/settings/delete.html
+++ b/app/html/user/settings/delete.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(form)
 @def sidebar():
   @include('shared/sidebar/user.html')
