--- a/app/html/user/settings/preferences.html
+++ b/app/html/user/settings/preferences.html
@@ -1,4 +1,4 @@
-@extends("shared/layout.html")
+@extends("shared/newlayout.html")
 @require(edituserform)
 @def sidebar():
     @include('shared/sidebar/user.html')
