--- a/app/html/shared/layout.html
+++ b/app/html/shared/layout.html
@@ -201,7 +201,7 @@
       @{main()!!html}
     </div>
     @if rendered_sidebar:
-      <div id="sidebar" class="sidebar pure-u-1 pure-u-md-6-24"> <!-- sidebar -->
+      <div id="sidebar" class="sidebar pure-u-1 pure-u-md-6-24" style="width: 20%"> <!-- sidebar -->
         @{rendered_sidebar!!html}
       </div>
     @end
