--- a/app/html/sub/post.html
+++ b/app/html/sub/post.html
@@ -36,7 +36,7 @@
     <meta property="og:image:height" content="70">
     <meta property="og:image:width" content="70">
     @elif post['thumbnail'] == '' and post['link'] == None:
-    <meta property="og:image" content="https://cekni.to/@{ url_for('static', filename='img/android-chrome-512x512.png') }">
+    <meta property="og:image" content="https://@{config.site.server_name}@{ url_for('static', filename='img/android-chrome-512x512.png') }">
     <meta property="og:ttl" content="600">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
