--- a/app/html/shared/post.html
+++ b/app/html/shared/post.html
@@ -36,10 +36,10 @@
     <div class="pbody">
       <div class="sub-icon-name-container">
         <a class="sub-icon-link" href="/@{config.site.sub_prefix}/@{post['sub']}">
-          <div class="@{'sub-icon-round' if not sub and not announcement and func.getSubData(post['sid']).get('icon_file') else ''}">
-            @if not sub and not announcement and func.getSubData(post['sid']).get("icon_file"):
+          <div class="@{'sub-icon-round' if not sub and not announcement and func.getSubData(post['sid'], simple=True).get('icon_file') else ''}">
+            @if not sub and not announcement and func.getSubData(post['sid'], simple=True).get("icon_file"):
               <img id="icon-preview"
-                   src="@{func.getSubData(post['sid'])['icon_file'].get('url', '') if func.getSubData(post['sid'])['icon_file'].get('default', False) else thumbnail_url(func.getSubData(post['sid'])['icon_file']['thumbnail'])}"
+                   src="@{func.getSubData(post['sid'], simple=True)['icon_file'].get('url', '') if func.getSubData(post['sid'], simple=True)['icon_file'].get('default', False) else thumbnail_url(func.getSubData(post['sid'], simple=True)['icon_file']['thumbnail'])}"
                    alt="@{_('Sub Icon')}">
             @end
           </div>
