--- a/app/html/indexmulti.html
+++ b/app/html/indexmulti.html
@@ -29,7 +29,7 @@
     <div class="alldaposts">
       @for post in posts:
         @if not ann or ann['pid'] != post['pid']:
-          @{ipost.singlePost(post, False)!!html}
+          @{ipost.singlePost(post, False, sub_icons=sub_icons)!!html}
         @end
       @end
     </div>
