Introducing Twitter embeds

--- a/app/html/shared/post.html
+++ b/app/html/shared/post.html
@@ -74,11 +74,15 @@
       <div class="author">
         @if post['link']:
           @if func.getDomain(post['link'].lower()) in config.site.expando_sites:
-          <div class="expando" data-pid="@{post['pid']}" data-t="lnk" title="@{_('Embed video')}" data-link="@{post['link']}"><div data-icon="play" class="icon expando-btn"></div></div>
+            @if post['link'].lower().startswith('https://x.com/'):
+            <div class="expando" data-pid="@{post['pid']}" data-t="lnk" title="@{_('View tweet')}" data-link="@{post['link']}"><div data-icon="twitter" class="icon expando-btn"></div></div>
+            @else:
+            <div class="expando" data-pid="@{post['pid']}" data-t="lnk" title="@{_('Embed video')}" data-link="@{post['link']}"><div data-icon="play" class="icon expando-btn"></div></div>
+            @end
           @elif post['link'].lower().endswith(('.png', '.jpg', '.gif', '.tiff', '.bmp', '.jpeg', '.webp')):
-          <div class="expando" data-pid="@{post['pid']}"  data-t="lnk" title="@{_('Show image')}" data-link="@{post['link']}"><div data-icon="image" class="icon expando-btn"></div></div>
+          <div class="expando" data-pid="@{post['pid']}" data-t="lnk" title="@{_('Show image')}" data-link="@{post['link']}"><div data-icon="image" class="icon expando-btn"></div></div>
           @elif post['link'].lower().endswith(('.mp4', '.webm', '.gifv')):
-          <div class="expando" data-pid="@{post['pid']}"  data-t="lnk" title="@{_('Play video')}" data-link="@{post['link']}"><div data-icon="play" class="icon expando-btn"></div></div>
+          <div class="expando" data-pid="@{post['pid']}" data-t="lnk" title="@{_('Play video')}" data-link="@{post['link']}"><div data-icon="play" class="icon expando-btn"></div></div>
           @end
         @elif post['ptype'] == 3:
           <div class="expando" data-pid="@{post['pid']}" data-t="poll" title="@{_('Show poll')}" data-link="None"><div data-icon="text" class="icon expando-btn"></div></div>
