--- a/app/html/mod/sub_reports_closed.html
+++ b/app/html/mod/sub_reports_closed.html
@@ -13,7 +13,7 @@ Mod |\
 @def main():
 <div id="container" class="mod-container">
   <div class="content">
-    <h1>@{_('Closed Reports for ')}<a href="@{ url_for('sub.view_sub', sub=sub.name) }">@{config.site.sub_prefix}/@{sub.name}</a>
+    <h1>@{_('Closed Reports for ')}<a href="@{ url_for('sub.view_sub', sub=sub.name) }">/@{config.site.sub_prefix}/@{sub.name}</a>
     @if sub.private:
       <span class="private" title="@{_('This sub is private.')}">@{_('PRIVATE')}</span>
     @end
